k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out tmp/k8s/
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: django
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: django
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out tmp/k8s/
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: django
    spec:
      containers:
        - env:
            - name: DEBUG
              valueFrom:
                configMapKeyRef:
                  key: DEBUG
                  name: env
            - name: POSTGRES_DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB_NAME
                  name: env
            - name: POSTGRES_HOST
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_HOST
                  name: env
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: env
            - name: POSTGRES_PORT
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PORT
                  name: env
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: env
            - name: STATIC_URL
              valueFrom:
                configMapKeyRef:
                  key: STATIC_URL
                  name: env
          image: nguthiru/hynfra-api:latest
          name: django
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
