k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s/
    kompose.version: 1.34.0 (cbf2835db)
    kompose.volume.path: ./backend/static
    kompose.volume.type: hostPath
  labels:
    io.kompose.service: django
  name: django
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: django
