k8s/nginx-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s/
    kompose.service.expose: example.com
    kompose.service.type: loadbalancer
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: nginx-tcp
  name: nginx-tcp
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: nginx
  type: LoadBalancer
