k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s
    kompose.service.expose: example.com
    kompose.service.expose.ingress-class-name: nginx
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
